<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/owGreen"
    android:backgroundTint="@color/owGreen"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="24dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:padding="10dp"
        android:text="@string/newtTransaction"
        android:textColor="#393E46"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/owWhite"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:padding="30dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/whoPaid"
            android:textColor="#393E46" />

        <Spinner
            android:id="@+id/sPaidBy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:dropDownWidth="wrap_content" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/forWho"
            android:textColor="@color/owDarkGrey" />

        <Spinner
            android:id="@+id/sPaidFor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:labelFor="@id/etAmount"
            android:padding="10dp"
            android:text="@string/howMuch"
            android:textColor="@color/owDarkGrey" />

        <EditText
            android:id="@+id/etAmount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/black"
            android:inputType="number"
            android:textColor="@color/owDarkGrey" />


    </LinearLayout>
</LinearLayout>